--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <script src="https://unpkg.com/vue"></script>
 </head>
 <body>
-<div id="app"></div>
+<div id="app">
     <h1>ldjilaslijdlisa</h1>
   {{ msg }}
-
+</div>
 <script>
 new Vue({
       el: '#app',
