--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 new Vue({
       el: '#app',
       data: {
-        msg: 'Hello from Vue'
+        msg: 'Hello World from Vue'
       }
     });
 </script>
