--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div id="app">
   {{ msg }}
     <input text="search"/>
-    <button>ddsadsadas</button>
+    <button>Search</button>
 </div>
 <script>
 new Vue({
