--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <title>No Score</title>
 <script src="https://unpkg.com/vue"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script src="https://apis.google.com/js/client.js?onload=googleApiClientReady"></script>
 </head>
 <body>
 <div id="app">
